[project]
name = "monitor-api-client"
authors = [
    { name="rainerBoss"}
]
version = "0.1.0"
description = "Client for calling Monitor API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
]
license = { file = "LICENSE.txt" }

[dependency-groups]
dev = [
    "dotenv>=0.9.9",
    "mypy>=1.17.0",
    "pytest>=8.4.1",
    "ruff>=0.12.7",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"