[project]
name = "monitor-api-client"
authors = [
    { name="rainerBoss"}
]
version = "0.2.0"
description = "Client for calling MonitorERP API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
]
license = { file = "LICENSE.txt" }

[dependency-groups]
dev = [
    "dotenv>=0.9.9",
    "mypy>=1.17.0",
    "pytest>=8.4.1",
    "ruff>=0.12.7",
]

[tool.uv]
package = true
